--- a/public/front-assets/css/main.css
+++ b/public/front-assets/css/main.css
@@ -5401,7 +5401,7 @@ button.tabs__button.text-light-1.fw-500.px-5.pb-5.lg\:pb-0.js-tabs-button {
   position: fixed;
   bottom: 0;
   left: 0;
-  z-index: 100;
+  /* z-index: 100; */
   width: var(--dashboard-width);
   height: calc(100% - 90px);
   padding: 0px 23px 34px 18px;
@@ -14034,7 +14034,7 @@ h3.post-title {
 
 .order-history-sec {
   position: relative;
-  z-index: 1;
+  /* z-index: 1; */
 }
 
 .order-history-sec a.button {
