--- a/public/front-assets/css/main.css
+++ b/public/front-assets/css/main.css
@@ -922,6 +922,18 @@ p.blockquote:after {
   padding: 60px 0px;
   /* margin-top: 30px !important; */
 }
+.flower-package-heading {
+  text-align: center; /* Center the text */
+ 
+}
+
+.border-bottom-img {
+  display: inline-block; /* Make the image inline-block */
+  width: 80%; /* Set a width for the image (you can adjust this value) */
+  max-width: 400px; /* Set a max width if needed */
+  height: auto; /* Maintain the aspect ratio of the image */
+ 
+}
 
 [data-anim^='slide-'],
 [data-anim-child^='slide-'] {
